--- a/client/less/challenge.less
+++ b/client/less/challenge.less
@@ -3,6 +3,8 @@
 }
 
 .bonfire-instructions blockquote {
+  font-size: 90%;
+  font-family: @font-family-monospace;
   color: @code-color;
   background-color: @code-bg;
   border-radius: @border-radius-base;
@@ -14,6 +16,7 @@
 }
 
 .bonfire-instructions dfn {
+  font-family: @font-family-monospace;
   color: @code-color;
   background-color: @code-bg;
   border-radius: @border-radius-base;
