Improve blockquote Render, more challenges

--- a/client/less/challenge.less
+++ b/client/less/challenge.less
@@ -9,10 +9,10 @@
   background-color: @code-bg;
   border-radius: @border-radius-base;
   border: 1px solid @pre-border-color;
-  white-space: pre-wrap;
-  font-size: inherit;
+  white-space: pre;
   padding: 5px 10px;
   margin-bottom: 5px;
+  overflow: auto;
 }
 
 .bonfire-instructions dfn {
