--- a/server/views/map/show.jade
+++ b/server/views/map/show.jade
@@ -17,6 +17,7 @@ block content
                 a(data-toggle='collapse', data-parent='#accordion', href='#collapse'+superBlock.name.split(' ').join('-'))
                   span.no-link-underline
                     i.fa.fa-caret-down
+                    i.fa.fa-caret-down &thinsp;
                   | #{superBlock.name}
               div.margin-left-10(id = 'collapse'+superBlock.name.split(' ').join('-') class = "collapse in map-collapse no-transition certBlock")
                   #nested
@@ -24,19 +25,27 @@ block content
                           h3
                             a(data-toggle='collapse', data-parent='#nested', href='#nested-collapse'+challengeBlock.name.replace(/(\W)/gi, '').split(' ').join('-'))
                               span.no-link-underline
-                                i.fa.fa-caret-down
+                                i.fa.fa-caret-
+                                i.fa.fa-caret-down &thinsp;
                               | #{challengeBlock.name}
                             span.challengeBlockTime (#{challengeBlock.time})
                           div.margin-left-10(id = "nested-collapse"+challengeBlock.name.replace(/\W/gi, '').split(' ').join('-') class = "collapse in map-collapse no-transition chapterBlock")
                               for challenge in challengeBlock.challenges
                                   if challenge.completed
                                       p.challenge-title.faded.text-primary.ion-checkmark-circled.padded-ionic-icon.negative-15(name="#{challenge.dashedName}")
-                                          a(href="/challenges/#{challenge.dashedName}" target='_parent')
+                                          a(href=challenge.url target='_parent')
                                               = challenge.title
                                               span.sr-only= " Complete"
                                   else if challenge.isRequired
                                       p.challenge-title.ion-ios-circle-outline.padded-ionic-icon.negative-15(name="#{challenge.dashedName}")
-                                          a(name="#{challenge.dashedName}" target='_parent' href="/challenges/#{challenge.dashedName}" class=challenge.isComingSoon ? 'disabled' : '')
+                                          a(name="#{challenge.dashedName}" target='_parent' href=challenge.url class=challenge.isComingSoon ? 'disabled' : '')
+                                      p.faded.text-primary.ion-checkmark-circled.padded-ionic-icon.negative-15(name="#{challenge.dashedName}")
+                                          a(href=challenge.url target='_parent')
+                                              = challenge.title
+                                              span.sr-only= " Complete"
+                                  else if challenge.isRequired
+                                      p.ion-ios-circle-outline.padded-ionic-icon.negative-15(name="#{challenge.dashedName}")
+                                          a(name="#{challenge.dashedName}" target='_parent' href=challenge.url class=challenge.isComingSoon ? 'disabled' : '')
                                               span= challenge.title
                                               span.sr-only= " Incomplete"
                                           if challenge.markNew
@@ -51,7 +60,9 @@ block content
                                               strong *
                                   else
                                       p.challenge-title.ion-ios-circle-outline.padded-ionic-icon.negative-15(name="#{challenge.dashedName}")
-                                          a(name="#{challenge.dashedName}" target='_parent' href="/challenges/#{challenge.dashedName}" class=challenge.isComingSoon ? 'disabled' : '')
+                                          a(name="#{challenge.dashedName}" target='_parent' href=challenge.url class=challenge.isComingSoon ? 'disabled' : '')
+                                      p.ion-ios-circle-outline.padded-ionic-icon.negative-15(name="#{challenge.dashedName}")
+                                          a(name="#{challenge.dashedName}" target='_parent' href=challenge.url class=challenge.isComingSoon ? 'disabled' : '')
                                               span= challenge.title
                                               span.sr-only= " Incomplete"
                                           if challenge.markNew
@@ -84,6 +95,7 @@ block content
                         span.text-primary &thinsp; &thinsp;
                           strong *
                       p.challenge-title.disabled.text-primary.ion-locked.padded-ionic-icon.negative-15(name="Legacy Code Nonprofit Project #1") Legacy Code Nonprofit Project #1
+                      p.disabled.text-primary.ion-locked.padded-ionic-icon.negative-15(name="Legacy Code Nonprofit Project #1") Legacy Code Nonprofit Project #1
                         span.text-primary &thinsp; &thinsp;
                           strong *
                       p.challenge-title.disabled.text-primary.ion-locked.padded-ionic-icon.negative-15(name="Legacy Code Nonprofit Project #2") Legacy Code Nonprofit Project #2
